<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textSize="@dimen/editText_TextSize" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editText_width"
            android:hint="@string/name_hint"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textSize="@dimen/editText_TextSize" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editText_width"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_text"
            android:textSize="@dimen/editText_TextSize" />

        <EditText
            android:id="@+id/birth_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editText_width"
            android:cursorVisible="false"

            android:hint="@string/birth_hint" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textSize="@dimen/editText_TextSize" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editText_width"
            android:hint="@string/password_text"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password_text"
            android:textSize="@dimen/editText_TextSize" />

        <EditText
            android:id="@+id/confirm_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editText_width"
            android:hint="@string/confirm_password_text"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="RegisterPerson"
            android:text="@string/register_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="moveToMain"
            android:text="@string/login_text" />


    </LinearLayout>

</LinearLayout>