<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normalDistantece"
            android:text="@string/email_text"
            android:textSize="@dimen/editText_TextSize" />

        <EditText
            android:id="@+id/email_login_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editText_width"
            android:height="40sp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textSize="@dimen/editText_TextSize" />

        <EditText
            android:id="@+id/password_login_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editText_width"
            android:hint="@string/password_hint"
            android:inputType="textPassword"

            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:onClick="loginHandler"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/register_message"
            android:onClick="moveToRegister"/>

    </LinearLayout>

</LinearLayout>